--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lab10c",
   "version": "0.1.0",
+  "homepage": "https://coldbeefnoodles.github.io/lab10c",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
