--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lab10c",
   "version": "0.1.0",
-  "homepage": "https://coldbeefnoodles.github.io/lab10c",
-  "private": true,
+  "homepage": "https://coldbeefnoodles.github.io/lab10c/",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
